--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="wrap">
       <div class="card">
         <div class="img">
+          <div class="tint"></div>
           <div class="image"></div>
         </div>
         <div class="card-text">
